--- a/HISTORY
+++ b/HISTORY
@@ -4,3 +4,8 @@ VDR Plugin 'dbus2vdr' Revision History
 2011-03-20: Version 0.0.1
 
 - Initial revision.
+
+2011-03-21: Version 0.0.1a
+
+- use thread pool for handling dbus messages so multiple
+  message won't block each other
