--- a/README
+++ b/README
@@ -65,6 +65,9 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
 - hit a key
   vdr-dbus-send.sh /Remote remote.HitKey string:'Menu'
 
+- open the main menu entry of a plugin
+  vdr-dbus-send.sh /Remote remote.CallPlugin string:'name-of-plugin'
+
 Using the Python binding
 ------------------------
 First, I don't know Python at all, I just copy code fragments from the Python Binding Tutorial [1]
