--- a/README
+++ b/README
@@ -68,6 +68,9 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
 - open the main menu entry of a plugin
   vdr-dbus-send.sh /Remote remote.CallPlugin string:'name-of-plugin'
 
+- trigger an update of the list of recordings
+  vdr-dbus-send.sh /Recording recording.Update
+
 Using the Python binding
 ------------------------
 First, I don't know Python at all, I just copy code fragments from the Python Binding Tutorial [1]
