--- a/HISTORY
+++ b/HISTORY
@@ -62,3 +62,9 @@ VDR Plugin 'dbus2vdr' Revision History
 2011-09-22: Version 0.0.2j
 
 - process NameAcquired signal auf DBus
+
+2011-12-10: Version 0.0.3
+
+- add new shutdown interface with "ConfirmShutdown"
+  returns a reply code of 250 if the user is inactive
+  and vdr has nothing to do in the near future
