--- a/README
+++ b/README
@@ -32,6 +32,14 @@ Instead of calling:
 you can call:
   vdr-dbus-send.sh /Plugins/<pluginname> plugin.SVDRPCommand string:'command' string:'parameter'
 
+Restrictions
+------------
+Objectpaths and interface names are restricted to some naming conventions. Only letters, numbers
+and the underscore are allowed. DBus doesn't provide any official escaping, so dbus2vdr won't do it.
+The only part of the names, which could contain other symbols are name of plugins. But "officially"
+there are also no other characters than letters and numbers allowed. And I only knew about
+streamdev-server/-client which break this rule. I think they should get fixed...
+
 Commandline Arguments
 ---------------------
 -s, --shutdown-hooks=/path/to/shutdown-hooks
