--- a/README
+++ b/README
@@ -60,6 +60,11 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
 - clear EPG data with optional value for inactivity timeout of eit-scanner (default: 10)
   vdr-dbus-send.sh /EPG epg.ClearEPG string:'channel' int32:10
 
+- add EPG entry
+  vdr-dbus-send.sh /EPG epg.PutEntry string:'C ...' string:'E ...' ...
+
+  The end marker argument '.' will be added if not provided.
+
 - read EPG data from file
   vdr-dbus-send.sh /EPG epg.PutFile string:'/path/to/epg/data'
 
