--- a/README
+++ b/README
@@ -87,6 +87,13 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
 - hit a key
   vdr-dbus-send.sh /Remote remote.HitKey string:'Menu'
 
+- display list of strings on the osd and let the user select one
+  vdr-dbus-send.sh /Remote remote.AskUser string:'title' string:'item 1' string:'item 2' ...
+
+  The zero-based index of the selected item will be returned with the signal "AskUserSelect",
+  the first parameter is the title-string, the second the index.
+  An index of -1 means, no item is selected (or osd closed because of a timeout).
+
 - open the main menu entry of a plugin
   vdr-dbus-send.sh /Remote remote.CallPlugin string:'name-of-plugin'
 
