--- a/debian/install
+++ b/debian/install
@@ -1,7 +1,8 @@
 libvdr-dbus2vdr.so.*    usr/lib/vdr/plugins/
-#debian/plugin.dbus2vdr.conf    etc/vdr/plugins/
+debian/plugin.dbus2vdr.conf    etc/vdr/plugins/
 #debian/tmp/usr/share/locale
 bin/vdr-dbus-send.sh   usr/share/vdr-plugin-dbus2vdr/
+shutdown-wrapper   usr/share/vdr-plugin-dbus2vdr/
 #bin/dbus-client.py usr/share/vdr-plugin-dbus2vdr/
 etc/de.tvdr.vdr.conf etc/dbus-1/system.d/
 
