--- a/HISTORY
+++ b/HISTORY
@@ -112,3 +112,7 @@ VDR Plugin 'dbus2vdr' Revision History
 2012-02-23: Version 0.0.3j
 
 - add "Now" and "Next" to EPG interface
+
+2012-03-07: Version 0.0.3k
+
+- add "DisableScanner" and "EnableScanner" to EPG interface
