--- a/HISTORY
+++ b/HISTORY
@@ -124,3 +124,7 @@ VDR Plugin 'dbus2vdr' Revision History
 2012-03-10: Version 0.0.4a
 
 - add "CreateProvider" and "DeleteProvider" to OSD interface
+
+2012-03-11: Version 0.0.4b
+
+- adapt to vdr 1.7.26 and add missing symbol
