--- a/README
+++ b/README
@@ -222,13 +222,14 @@ receive them.
 Upstart
 -------
 When all plugins are started and dbus2vdr enters the first time the "MainThreadHook"
-it sends a signal for every plugin to Upstart like:
-initctl emit --no-wait vdr-plugin PLUGIN=<name> ACTION=started
+it emits an Upstart signal like:
+initctl emit --no-wait vdr-plugin softhddevice=started dbus2vdr=started ...
 
 And when the plugin reaches its "Stop" state another list of signals are sent:
-initctl emit --no-wait vdr-plugin PLUGIN=<name> ACTION=stopped
+initctl emit --no-wait vdr-plugin softhddevice=stopped dbus2vdr=stopped ...
 
-You can configure various upstart jobs to respond to those signals.
+You can configure various upstart jobs to respond to this signal like starting
+the vdr frontend etc.
 
 Using the Python binding
 ------------------------
