refine Upstart signals
- only emit one signal "vdr-plugin name=started name=started ..."
- raise a SIGSTOP before "vdr-plugin"
- only do Upstart things if enabled with commandline argument "--upstart"

--- a/HISTORY
+++ b/HISTORY
@@ -148,3 +148,6 @@ VDR Plugin 'dbus2vdr' Revision History
 
 2012-04-28: Version 0.0.6b
 - emit only one Upstart event for all plugins
+
+2012-05-02: Version 0.0.6c
+- emit Upstart signal only if activated and send a SIGSTOP
