disable dbus activation, makes trouble at shutdown

--- a/debian/install
+++ b/debian/install
@@ -5,5 +5,5 @@ bin/vdr-dbus-send.sh   usr/share/vdr-plugin-dbus2vdr/
 shutdown-wrapper   usr/share/vdr-plugin-dbus2vdr/
 #bin/dbus-client.py usr/share/vdr-plugin-dbus2vdr/
 etc/de.tvdr.vdr.conf etc/dbus-1/system.d/
-etc/de.tvdr.vdr-upstart.service usr/share/dbus-1/system-services/
+#etc/de.tvdr.vdr-upstart.service usr/share/dbus-1/system-services/
 
