correct parameter parsing of epg.PutEntry and remote.AskUser

--- a/README
+++ b/README
@@ -78,7 +78,7 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
   vdr-dbus-send.sh /EPG epg.ClearEPG string:'channel' int32:10
 
 - add EPG entry
-  vdr-dbus-send.sh /EPG epg.PutEntry string:'C ...' string:'E ...' ...
+  vdr-dbus-send.sh /EPG epg.PutEntry array:string:'C ...','E ...',...
 
   The end marker argument '.' will be added if not provided.
 
@@ -127,7 +127,7 @@ If the SVDRP command doesn't take a parameter you can ommit it or pass an empty 
   vdr-dbus-send.sh /Remote remote.HitKey string:'Menu' string:'Down' string:'Down' ...
 
 - display list of strings on the osd and let the user select one
-  vdr-dbus-send.sh /Remote remote.AskUser string:'title' string:'item 1' string:'item 2' ...
+  vdr-dbus-send.sh /Remote remote.AskUser string:'title' array:string:'item 1','item 2',...
 
   The zero-based index of the selected item will be returned with the signal "AskUserSelect",
   the first parameter is the title-string, the second the index.
