--- a/HISTORY
+++ b/HISTORY
@@ -157,3 +157,6 @@ VDR Plugin 'dbus2vdr' Revision History
 
 2012-05-15: Version 0.0.6e
 - add support for getting/setting plugin parameters in the setup.conf
+
+2012-05-23: Version 0.0.6f
+- correct parameter parsing of epg.PutEntry and remote.AskUser
