--- a/HISTORY
+++ b/HISTORY
@@ -160,3 +160,6 @@ VDR Plugin 'dbus2vdr' Revision History
 
 2012-05-23: Version 0.0.6f
 - correct parameter parsing of epg.PutEntry and remote.AskUser
+
+2012-05-23: Version 0.0.6g
+- add "Del" to setup interface
