extend "ConfirmShutdown" with an "ignore user" parameter

--- a/HISTORY
+++ b/HISTORY
@@ -167,3 +167,6 @@ VDR Plugin 'dbus2vdr' Revision History
 2012-05-23: Version 0.0.7
 - output all plugin settings with setup.List
 - delete all plugin settings with "Del plugin.*"
+
+2012-06-06: Version 0.0.7a
+- extend "ConfirmShutdown" with an "ignore user" parameter
