add NextWakeupTime to Setup interface

--- a/HISTORY
+++ b/HISTORY
@@ -177,3 +177,6 @@ VDR Plugin 'dbus2vdr' Revision History
 
 2012-06-20: Version 0.0.7c
 - call dbus_threads_init_default, since connection shall be used by multiple threads
+
+2012-06-27: Version 0.0.7d
+- add NextWakeupTime to Setup interface
